# Jesko2

./: .env.example  .gitignore  .replit  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_MEMORY_FIX.md  DEPLOYMENT_TROUBLESHOOTING.md  Dockerfile  PORT_CONFIGURATION.md  QUICK_DEPLOYMENT_STEPS.md  README.md  RENDER_DATABASE_SETUP.md  RENDER_DEPLOY.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_DEPLOYMENT_QUICK_FIX.md  RENDER_DEPLOYMENT_STAGED.md  RENDER_DEPLOYMENT_SUMMARY.md  RENDER_QUICKSTART.md  TWILIO_SETUP.md  add-purchased-number.js  admin-emergency-fixed.ts  admin-emergency-routes.ts  admin-login-helper.js  admin-login.html  advanced-deploy-build.sh  app.py  automated-call-routes.ts  build-frontend.sh  build-with-more-memory.js  check-admin.js  check-fix-auth.cjs  check-user-id.js  check-zack-partner.js  cookie.txt  cookies.txt  create-admin-custom.js  create-admin-partner.js  create-admin.cjs  create-admin.js  create-mulondo-partner.js  create-new-partner.js  (+137 more)
SalesGPT/: __init__.py  salesbot.py  salesgpt.py
admin/: index.js
app/: README.md  __init__.py  main.py  requirements.txt  run.py  test_elevenlabs.py  test_server.py
attached_assets/: Pasted--Cloning-from-https-github-com-Emilghel-Jesko2-Checking-out-commit-0a447e5e84556ad7bbbd4c96-1745252023082.txt  Pasted--Cloning-from-https-github-com-Emilghel-Jesko2-Checking-out-commit-0a447e5e84556ad7bbbd4c96-1745252286163.txt  Pasted--Cloning-from-https-github-com-Emilghel-Jesko2-Checking-out-commit-0a447e5e84556ad7bbbd4c96-1745252723350.txt  Pasted--id-3M049991JF5624929-status-COMPLETED-payment-source-card--1743350018364.txt  (+29 more)
(+364 files in other folders)
