[tool.poetry]
name = "salesgpt-twilio-integration"
version = "0.1.0"
description = "Integration of SalesGPT with ElevenLabs and Twilio"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.34.1"
pydantic = "^2.6.4"
python-dotenv = "^1.1.0"
openai = "^1.7.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
requests = "^2.32.3"
pydub = "^0.25.1"
chromadb = "^0.4.18"
tiktoken = "^0.5.2"
litellm = "^1.10.2"
boto3 = "^1.33.2"
aioboto3 = "^12.3.0"
ffmpeg-python = "^0.2.0"
elevenlabs = "^1.56.0"
python-multipart = "^0.0.20"
starlette = "^0.46.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"